Dokumentation-software-sampling og THD

--- a/ProjektDokumentation/sektioner/Design/Kommunikationsprotokoller.tex
+++ b/ProjektDokumentation/sektioner/Design/Kommunikationsprotokoller.tex
@@ -1,6 +1,7 @@
 % !TEX root = ../../prj4projektdokumentation.tex
 
 \chapter{Kommunikationsprotokoller}
+\label{ch:KomProtokol}
 
 \section{TCP protokol}
 \label{TCPprotokol}
