--- a/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
+++ b/ProjektDokumentation/sektioner/kravspecifikation/IkkeFunktionelleKrav.tex
@@ -17,6 +17,7 @@
 \end{enumerate}
 
 \subsection{Måleenhed}
+\label{subsec:ME}
 \begin{enumerate}
 	\item Måle spændingen ved trinskifteren og forbrugerne mellem 0 og 8 V
 	\item Måle spændingen med en præcision på $\pm$ 10mV
