--- a/ProjektDokumentation/sektioner/Trinskifter/Modultest.tex
+++ b/ProjektDokumentation/sektioner/Trinskifter/Modultest.tex
@@ -2,7 +2,7 @@
 
 
 \section{Modultest}
-
+\subsection{Spænding over belastning}
 For at tjekke, at distributionslinjen og de forskellige belastninger giver det spændingsfald, der forventes laves en modultest af det samlede system med distributionslinje, belastninger og trinskifter. Der vælges forskellige belastninger og trin på transformeren, hvor for hver indstilling måles spændingsfaldet over belastningen. Resultaterne heraf ses i tabellen nedenfor. 
 
 
@@ -12,24 +12,22 @@ For at tjekke, at distributionslinjen og de forskellige belastninger giver det s
 		\hline
 		\textbf{Trin} & \textbf{Belastning} & \textbf{Forventet resultat} & \textbf{Resultat} \\\hline
 		
-		\multirow{5}{*}{4 V AC} 
+		\multirow{6}{*}{4 V AC} 
 		& $50 \Omega\parallel 50 \Omega$ & 3,2 V AC over belastning & 2,9 V AC målt over belastning \\\hhline{~---} 	
 		& $50 \Omega\parallel 16 \Omega$ & 2,6 V AC over belastning & 2,0 V AC målt over belastning \\\hhline{~---}
+		& $54 \Omega$ & x V AC over belastning & x V AC målt over belastning \\\hhline{~---} 
 		& $50 \Omega$ & 3,6 V AC over belastning & 3,5 V AC målt over belastning \\\hhline{~---} 	
 		& $39 \Omega$ & 3,5 V AC over belastning & 3,4 V AC målt over belastning \\\hhline{~---} 
-		& $16 \Omega$ & 2,8 V AC over belastning & 2,5 V AC målt over belastning \\\hhline{~---} 
-		& $x \Omega$ & x V AC over belastning & x V AC målt over belastning \\\hhline{~---} 
-		& $x \Omega$ & x V AC over belastning & x V AC målt over belastning \\\hline 
+		& $16 \Omega$ & 2,8 V AC over belastning & 2,5 V AC målt over belastning \\\hline 
 	
 		
-		\multirow{5}{*}{5 V AC} 
+		\multirow{6}{*}{5 V AC} 
 		& $50 \Omega\parallel 50 \Omega$ & 4,0 V AC over belastning & 3,7 V AC målt over belastning \\\hhline{~---} 	
 		& $50 \Omega\parallel 16 \Omega$ & 3,22 V AC over belastning & 2,76 V AC målt over belastning \\\hhline{~---}
+		& $54 \Omega$ & x V AC over belastning & x V AC målt over belastning \\\hhline{~---} 
 		& $50 \Omega$ & 4,4 V AC over belastning & 4,6 V AC målt over belastning \\\hhline{~---} 	
 		& $39 \Omega$ & 4,3 V AC over belastning & 4,2 V AC målt over belastning \\\hhline{~---} 
-		& $16 \Omega$ & 3,5 V AC over belastning & 3,1 V AC målt over belastning \\\hhline{~---} 
-		& $x \Omega$ & x V AC over belastning & x V AC målt over belastning \\\hhline{~---} 
-		& $x \Omega$ & x V AC over belastning & x V AC målt over belastning \\\hline 
+		& $16 \Omega$ & 3,5 V AC over belastning & 3,1 V AC målt over belastning \\\hline
 		
 	\end{tabular}
 	\caption{Modultest for distributionslinje, belastninger og trinskifter}
@@ -38,3 +36,35 @@ For at tjekke, at distributionslinjen og de forskellige belastninger giver det s
 
 Det kan dermed ud fra modultesten konkluderes, at spændingen over belastningerne falder som forventet, dog med en afvigelse på maksimalt 0,5V. Afvigelsen er størst, jo lavere belastning som tilsluttes. 
 
+
+\subsection{Power factor}
+
+
+\begin{table}[H]
+	\centering
+	\begin{tabular}{|l|l|l|l|}
+		\hline
+		\textbf{Trin} & \textbf{Belastning} & \textbf{Forventet resultat} & \textbf{Resultat} \\\hline
+		
+		\multirow{6}{*}{4 V AC} 
+		& $50 \Omega\parallel 50 \Omega$ & 3,2 V AC over belastning & 2,9 V AC målt over belastning \\\hhline{~---} 	
+		& $50 \Omega\parallel 16 \Omega$ & 2,6 V AC over belastning & 2,0 V AC målt over belastning \\\hhline{~---}
+		& $55 \Omega$ &  &  \\\hhline{~---} 
+		& $50 \Omega$ &  &  \\\hhline{~---} 	
+		& $39 \Omega$ &  &  \\\hhline{~---} 
+		& $16 \Omega$ &  &  \\\hline 
+		
+		
+		\multirow{6}{*}{5 V AC} 
+		& $50 \Omega\parallel 50 \Omega$ & 3,2 V AC over belastning & 2,9 V AC målt over belastning \\\hhline{~---} 	
+		& $50 \Omega\parallel 16 \Omega$ & 2,6 V AC over belastning & 2,0 V AC målt over belastning \\\hhline{~---}
+		& $55 \Omega$ &  &  \\\hhline{~---} 
+		& $50 \Omega$ &  &  \\\hhline{~---} 	
+		& $39 \Omega$ &  &  \\\hhline{~---} 
+		& $16 \Omega$ &  &  \\\hline 
+
+		
+	\end{tabular}
+	\caption{Modultest for distributionslinje, belastninger og trinskifter}
+	\label{tab:Modultesttrin}
+\end{table}
